[package]
name = "renege"
version = "0.3.0"
edition = "2024"
authors = ["Dmitry Zamkov <dmitry94@gmail.com>"]
description = "Tracking cache validity using fast concurrent invalidation propogation."
repository = "https://github.com/dzamkov/renege"
license = "MIT OR Apache-2.0"
keywords = ["cache", "invalidation", "lock-free", "frp"]
categories = ["rust-patterns", "data-structures", "concurrency", "caching"]
readme = "README.md"

[dev-dependencies]
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }